# uav_motion

./: CMakeLists.txt  README.md  package.xml
action/: waypoints.action
include/uav_motion/: geometric_controller.h  trajectory_generator.h  trajectory_sampler.h
launch/: uav_motion.launch  uav_motion_no_sim.launch
src/: .simple_waypoint_generator.py.swp  geometric_controller.cpp  lawnmower_waypoints_generator.py  param_update.py  simple_waypoint_generator.py  trajectory_generator.cpp  trajectory_sampler.cpp  waypoint_generator.py
